[metadata]
name = python-jsonpath-rw-ext
summary = Extensions for JSONPath RW
description-file =
    README.rst
author = Mehdi Abaakouk
author-email = sileht@sileht.net
home-page = http://blog.sileht.net
classifier =
    Development Status :: 5 - Production/Stable
    Intended Audience :: Developers
    License :: OSI Approved :: Apache Software License
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.3
    Programming Language :: Python :: 3.4

[files]
packages =
    jsonpath_rw_ext

[build_sphinx]
source-dir = doc/source
build-dir = doc/build
all_files = 1

[upload_sphinx]
upload-dir = doc/build/html

[compile_catalog]
directory = jsonpath_rw_ext/locale
domain = python-jsonpath-rw-ext

[update_catalog]
domain = python-jsonpath-rw-ext
output_dir = jsonpath_rw_ext/locale
input_file = jsonpath_rw_ext/locale/python-jsonpath-rw-ext.pot

[extract_messages]
keywords = _ gettext ngettext l_ lazy_gettext
mapping_file = babel.cfg
output_file = jsonpath_rw_ext/locale/python-jsonpath-rw-ext.pot
